<resources>
    <string name="app_name">UnitTest</string>
    <string name="settings_title">Input Form</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Name Hint</string>
    <string name="dob_label">DOB</string>
    <string name="email_label">Email Label</string>
    <string name="email_hint">Email Hint</string>
    <string name="save">Save</string>
    <string name="revert">Revert</string>
</resources>
